--- a/Nakom/mechatronics/templates/mechatronics/base.html
+++ b/Nakom/mechatronics/templates/mechatronics/base.html
@@ -13,11 +13,13 @@
     <link rel='stylesheet' type='text/css' href="{% static 'mechatronics/css/base.css' %}"/>
     <link rel='stylesheet' type='text/css' href="{% static 'mechatronics/css/base_forms.css' %}"/>
     <link rel='stylesheet' type='text/css' href="{% static 'mechatronics/css/datepicker.css' %}"/>
+    <link rel='stylesheet' type='text/css' href="{% static 'mechatronics/css/popups.css' %}"/>
 
     <script type="text/javascript" src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'mechatronics/js/accordion.js' %}"></script>
     <script type="text/javascript" src="{% static 'mechatronics/js/datepicker.js' %}"></script>
-    
+    <script type="text/javascript" src="{% static 'mechatronics/js/popus.js' %}"></script>
+
     {% block js_css %} {% endblock %}
 </head>
 
