The pagination was added in the search page, renamed some vars and fixed broken js file

--- a/Nakom/mechatronics/templates/mechatronics/base.html
+++ b/Nakom/mechatronics/templates/mechatronics/base.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'mechatronics/js/accordion.js' %}"></script>
     <script type="text/javascript" src="{% static 'mechatronics/js/datepicker.js' %}"></script>
-    <script type="text/javascript" src="{% static 'mechatronics/js/popus.js' %}"></script>
+    <script type="text/javascript" src="{% static 'mechatronics/js/popups.js' %}"></script>
 
     {% block js_css %} {% endblock %}
 </head>
