--- a/Nakom/mechatronics/templates/mechatronics/equipment_add.html
+++ b/Nakom/mechatronics/templates/mechatronics/equipment_add.html
@@ -65,7 +65,7 @@
                 <fieldset>
                     <input type="text" name="folioQuery" value="{{ query|escape }}"  placeholder="Folio">
                     <input type="submit" name="submitFolio" value="Buscar" class="btn-buscar">
-                    <p class='error'> {{ error }} </p>
+                    <p class='error'> {{ error.search }} </p>
                 </fieldset>
               </td>
             <tr>
