--- a/Nakom/mechatronics/static/mechatronics/css/popups.css
+++ b/Nakom/mechatronics/static/mechatronics/css/popups.css
@@ -1,5 +1,5 @@
 /*********************************************************************************************************/
-/*************************** Ventana emergente para agragar cliente **************************************/
+/*****   Ventana emergente para agregar cliente y confirmación de delete   *******************************/
 /*********************************************************************************************************/
 .overlay-container1 {
 		background: -moz-radial-gradient(center, ellipse cover,  rgba(127,127,127,0) 0%, rgba(127,127,127,0.9) 100%);
