'Added the functionality to add, edit, search and delete client'

--- a/Nakom/mechatronics/templates/mechatronics/equip_add.html
+++ b/Nakom/mechatronics/templates/mechatronics/equip_add.html
@@ -1,4 +1,4 @@
-{% extends 'mechatronics/base_equip.html' %}
+{% extends 'mechatronics/equip_base.html' %}
 
 {% block title_2 %} Agregar Equipo {% endblock %}
 
