Added the functionality to add, edit, search and delete payment

--- a/Nakom/mechatronics/templates/mechatronics/base_employee.html
+++ b/Nakom/mechatronics/templates/mechatronics/base_employee.html
@@ -29,8 +29,9 @@
 				{% block title_2 %}{% endblock %}
 			</legend>
 			<table>
-				{{ formEmployee.as_table }}
+				{{ formPayment.as_table }}
 			</table>
+
 			<input type='submit' value='guardar'/>
 		</fieldset>
 
